added LanguageTag::equals(), fdo#62278 related

Change-Id: I6471f8eaa46d9203c75569436b233a09fe337910